# vocoflow

./: Cargo.toml  README.md
.github/workflows/: ci-cd.yml  release.yml
docs/: BUILD_AND_RELEASE.md  SETTINGS_AND_LOGGING.md
src/: history.rs  lib.rs  main.rs  runtime_flash.rs  settings.rs
src/app/: workers.rs
src/settings_window/: mod.rs  window.rs
src/settings_window/bridge/: config.rs  events.rs  mod.rs
src/settings_window/bridge/endpoints/: mod.rs  settings_delete_history_entry.rs  settings_get_all.rs  settings_get_history.rs  settings_reset_defaults.rs  settings_update_history.rs  settings_update_hotkey.rs  settings_update_logging.rs  settings_update_start_on_login.rs  settings_update_transcription.rs
ui/settings-window/: package.json
ui/settings-window/src/: App.tsx  ipc.ts
ui/settings-window/src/components/navigation/: SettingsSidebar.tsx
ui/settings-window/src/components/sections/: HistorySection.tsx
ui/settings-window/src/types/: settings.ts
