[package]
name = "vocoflow"
version = "0.1.1"
edition = "2024"

[features]
default = ["ort-cpu"]
ort-cpu = ["transcribe-rs/onnx"]
ort-cuda = ["transcribe-rs/onnx", "transcribe-rs/ort-cuda"]
ort-coreml = ["transcribe-rs/onnx", "transcribe-rs/ort-coreml"]
x11 = ["eframe/x11", "winit/x11"]
wayland = ["eframe/wayland", "winit/wayland"]

[dependencies]
cpal = "0.15"
eframe = "0.27"
hound = "3.5"
tempfile = "3.10"
rdev = "0.5"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tray-icon = "0.19"
image = { version = "0.25", default-features = false, features = ["png", "ico"] }
winit = "0.30"
single-instance = "0.3"
directories = "5"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
transcribe-rs = { version = "0.3", default-features = false }
arboard = "3"
enigo = "0.2"
active-win-pos-rs = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "std"] }
tracing-appender = "0.2"
tracing-chrome = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-openai = "0.26"
wry = { version = "0.46", features = ["tracing", "linux-body"] }
notify = "6"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_UI_Shell"] }

[build-dependencies]
winres = "0.1"